--- a/opencv/Dockerfile
+++ b/opencv/Dockerfile
@@ -5,8 +5,37 @@
 #
 
 # Base image
-FROM ubuntu-cxx
+FROM ubuntu-cxx:latest
 
 # Install OpenCV
-ADD install.sh install.sh
-RUN sh install.sh
+#!/bin/sh
+
+#
+## Install dependencies
+#
+RUN \
+  apt-get -y install libopencv-dev libgtk2.0-dev pkg-config \
+             python-dev python-numpy libdc1394-22 libdc1394-22-dev \
+             libjpeg-dev libpng12-dev libtiff4-dev libjasper-dev libavcodec-dev \
+             libavformat-dev libswscale-dev libxine-dev libgstreamer0.10-dev \
+             libgstreamer-plugins-base0.10-dev libv4l-dev libtbb-dev libqt4-dev \
+             libfaac-dev libmp3lame-dev libopencore-amrnb-dev libopencore-amrwb-dev \
+             libtheora-dev libvorbis-dev libxvidcore-dev x264 v4l-utils unzip
+
+#
+## Download OpenCV source
+#
+RUN wget https://github.com/Itseez/opencv/archive/3.0.0.zip -O opencv-3.0.0
+RUN unzip -qq opencv-3.0.0.zip
+
+#
+## Build OpenCV
+#
+RUN \
+  cd opencv-3.0.0 && \
+  mkdir build && \
+  cd build && \
+  cmake -D CMAKE_BUILD_TYPE=RELEASE -D CMAKE_INSTALL_PREFIX=/usr/local -D WITH_TBB=ON -D WITH_V4L=ON -D WITH_OPENGL=ON .. && \
+  make -j4 && \
+  make install && \
+  ldconfig
