--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
   - cp ~/.bashrc root/.bashrc
 
 install:
-  - docker build --tag=$DOCKER_TAG:latest .
+  - docker build --quiet=true --tag=$DOCKER_TAG:default .
   - docker build --tag=$DOCKER_TAG:opencv opencv
   - docker images
 
