All build is OK. Clean working directory, and update README.md.

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,12 +16,12 @@ install:
   - docker images
 
 script:
-  - docker run $DOCKER_TAG cat /etc/lsb-release
-  - docker run $DOCKER_TAG gcc --version
-  - docker run $DOCKER_TAG g++ --version
-  - docker run $DOCKER_TAG clang --version
-  - docker run $DOCKER_TAG clang++ --version
-  - docker run $DOCKER_TAG cmake --version
+  - docker run $DOCKER_TAG:default cat /etc/lsb-release
+  - docker run $DOCKER_TAG:default gcc --version
+  - docker run $DOCKER_TAG:default g++ --version
+  - docker run $DOCKER_TAG:default clang --version
+  - docker run $DOCKER_TAG:default clang++ --version
+  - docker run $DOCKER_TAG:default cmake --version
 
 after_success:
   - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
