--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,8 @@ script:
   - docker run $DOCKER_TAG:default cmake --version
 
 after_success:
-  - if [ $BRANCH_NAME == "master" ]; then docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"; fi
-  - if [ $BRANCH_NAME == "master" ]; then docker push tatsy/ubuntu-cxx; fi
+  - if [ $BRANCH_NAME = "master" ]; then docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"; fi
+  - if [ $BRANCH_NAME = "master" ]; then docker push tatsy/ubuntu-cxx; fi
 
 notifications:
   email:
